# ShowJCR

./: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  main.cpp  showjcr.cpp  showjcr.h  showjcr.ui  sqlitedb.cpp  sqlitedb.h
